--- a/style.css
+++ b/style.css
@@ -465,3 +465,143 @@ header .fa-bars{
     
 }
 /* نهاية home page */
+
+/*بداية تصميم loginPage.html*/
+
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+
+}
+body 
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-image: url("Images/2818073.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-color: #ffebeb; /* البديل لو كانت الصورة غير متاحة لأي سبب كان*/
+}
+
+.logIn-Wrapprr
+{
+    width: 420px;
+    background-color: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, blue0, .2);
+    color: #000; /* لون النصوص في الكلاس المحدد*/
+    border-radius: 10px;
+    padding: 30px 40px;
+}
+
+.logIng-Title
+{
+    font-size: 36px;
+    text-align: center;
+}
+.inputBox
+{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 30px 0; /* مايشتغل عندي ******/
+}
+.inputBox input 
+{
+    text-align: right;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, 2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #000;
+    padding: 20px 45px 20px 20px;
+}
+
+.inputBox input ::placeholder
+{
+    color: #f7f5f2;
+}
+.inputBox i
+{
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+.icons-User-Lock
+{
+    color: #e8cdcc;
+}
+
+.rememeber-forgot 
+{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+}
+
+.rememeber-forgot label input
+{
+    accent-color: #fff;
+    margin-right: 3px;
+}
+
+.rememeber-forgot a 
+{
+    color: #000;
+    text-decoration: none;
+}
+
+.rememeber-forgot a:hover
+{
+   text-decoration: underline; 
+}
+
+.logIn-Wrapprr .btn 
+{
+    width: 100%;
+    height: 45px;
+    background-color: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, -1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #000;
+    font-weight: 600;
+}
+
+.createAccpount-page
+{
+  font-size: 14.5px;  
+  text-align: center;
+  margin: 20px 0 15px;
+}
+
+createAccpount-page p a 
+{
+   color: #000; 
+   text-decoration: none;
+   font-weight: 600;
+}
+
+createAccpount-page p a:hover
+{
+    text-decoration: underline;
+}
+
+/*نهاية تصميم loginPage.html*/
