--- a/style.css
+++ b/style.css
@@ -605,3 +605,171 @@ createAccpount-page p a:hover
 }
 
 /*نهاية تصميم loginPage.html*/
+
+
+/*نهاية تصميم loginPage.html*/
+
+/*بدايه creatAccount.html*/
+
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+
+}
+body 
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-image: url("2818073.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-color: #ffebeb; /* البديل لو كانت الصورة غير متاحة لأي سبب كان*/
+}
+.icons-user-Lock
+{
+    color: #e8cdcc;
+}
+
+.Regester{
+    width: 420px;
+    background-color: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, blue0, .2);
+    color: #000; /* لون النصوص في الكلاس المحدد*/
+    border-radius: 10px;
+    padding: 30px 40px;
+}
+.Fname
+{
+    font-size: 36px;
+    text-align: center;
+}
+
+.Lname
+{
+    font-size: 36px;
+    text-align: center;
+}
+
+.myemail{
+    font-size: 36px;
+    text-align: center;
+
+}
+.telPhone{
+    font-size: 36px;
+    text-align: center;
+
+}
+.myPassword{
+    font-size: 36px;
+    text-align: center;
+
+}
+.mycon{
+    font-size: 36px;
+    text-align: center;
+
+}
+.myBirth{
+
+    text-align: right;
+
+}
+.myDate{
+    border-radius: 10px;
+    text-align: right;
+
+}
+.gender{
+    text-align: right;
+}
+
+.myinputBox
+{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 30px 0; /* مايشتغل عندي ******/
+}
+.myinputBox input 
+{
+    text-align: right;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, 2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #000;
+    padding: 20px 45px 20px 20px;
+}
+
+.myinputBox input ::placeholder
+{
+    color: #f7f5f2;
+}
+.myinputBox i
+{
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+.icons-User-Lock
+{
+    color: #e8cdcc;
+}
+
+.rememeber-forgot 
+{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+}
+.Regester .btnn 
+{
+    width: 100%;
+    height: 45px;
+    background-color: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, -1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #000;
+    font-weight: 600;
+}
+
+.mybutton
+{
+    width: 100%;
+    height: 45px;
+    background-color: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, -1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #000;
+    font-weight: 600;
+}
+
+
+
+
+
+/*نهاية تصميم creatAcount.html*/
