--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ section{
 
 .heading{
     text-align: center;
-    font-size: 6rem;
+    font-size: 1.5rem;
     color: #333;
     padding: 1rem;
     margin: 2rem 0;
@@ -48,13 +48,13 @@ section{
 .btn{
     display: inline-block;
     margin-top: 1rem;
-    border-radius: 8rem;
+    border-radius: 5rem;
     background: #333;
     color: #fff;
-    padding: 3rem 7rem;
+    padding: .9rem 3.5rem;
     cursor: pointer;
     position: 1.7rem;
-    font-size: 3rem;
+    font-size: 1rem;
 }
 
 .btn:hover{
@@ -74,7 +74,7 @@ header{
 }
 
 header .logo{
-    font-size: 11rem;
+    font-size: 2rem;
     color: #333;
     font-weight: bolder;
 }
@@ -84,8 +84,8 @@ header .logo span{
 }
 
 header .navbar a{
-    font-size: 7rem;
-    padding: 0 10rem;
+    font-size: 1.5rem;
+    padding: 0 1.5rem;
     color: #d7a7aa;
 }
 
@@ -94,7 +94,7 @@ header .navbar a:hover{
 }
 
 header .icons a{
-    font-size: 5rem;
+    font-size: 1.5rem;
     color:#333;
     margin-left: 1.5rem;
 }
@@ -127,23 +127,23 @@ header .fa-bars{
 }
 
 .home .content{
-    max-width: 150rem;
+    max-width: 50rem;
 }
 
 .home .content h3{
-    font-size: 6rem;
+    font-size: 4rem;
     color: #333;
 }
 
 .home .content span{
-    font-size: 6rem;
-    color: var(--white);
+    font-size: 2rem;
+    color: #000000;
     padding: 1rem 0;
     line-height: 1.5;
 }
 
 .home .content p{
-    font-size: 7rem;
+    font-size: 2.5rem;
     color: #333;
     padding: 1rem 0;
     line-height: 1.5;
@@ -166,11 +166,11 @@ header .fa-bars{
     position: relative;
 }
 
-.about .row .video-container .video{
+.about .row .video-container video{
     width: 100%;
     border: 1.5rem solid #fff;
     border-radius: .5rem;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 1);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
     height: 100%;
     object-fit: cover;
 }
@@ -178,7 +178,7 @@ header .fa-bars{
 .about .row .video-container h3{
     position: absolute;
     top: 50%; transform: translateY(-50%);
-    font-size: 10rem;
+    font-size: 3rem;
     background: #fff;
     width: 100%;
     padding: 1rem 2rem;
@@ -191,18 +191,18 @@ header .fa-bars{
 }
 
 .about .row .content h3 {
-    font-size: 7rem;
+    font-size: 3rem;
     color: #333;
     text-align: right;
 
 }
 
 .about .row .content p {
-    font-size: 4rem;
+    font-size: 1.5rem;
     color: #999;
-    padding: 5rem 0;
+    padding: .5rem 0;
     padding-top: 1rem;
-    line-height: 5rem;
+    line-height: 1.8rem;
     text-align: right; 
 }
 
@@ -210,10 +210,10 @@ header .fa-bars{
     background: #eee;
     display: flex;
     flex-wrap: wrap;
-    gap: 5rem;
+    gap: 1rem;
     padding-top: 5rem;
     padding-bottom: 5rem;
-    height: 35rem;
+
 }
 
 .icons-container .icons{
@@ -226,114 +226,39 @@ header .fa-bars{
 }
 
 .icons-container .icons img{
-    height: 15rem;
+    height: 5rem;
     margin-right: 2rem;
 }
 
 .icons-container .icons h3{
     color: #000000;
     padding-bottom: .5rem;
-    font-size: 3.5rem;
+    font-size: 1.5rem;
 }
 
 .icons-container .icons span{
     color: var(--pink);
-    font-size: 3rem;
-}
-
-.products .box-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-    width: 80%;
-    padding-left: 55rem;
-}
-
-.products .box-container .box{
-    flex: 1 1 30rem;
-    box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
-    border-radius: .5rem;
-    border: 1rem solid rgba(0, 0, 0, .1);
-    position: relative;
-}
-
-
-
-
-.products .box-container .box .image{
-    position: relative;
-    text-align: center;
-    padding-top: 2rem;
-    overflow: hidden;
-}
-
-.products .box-container .box .image img{
-    height: 50rem;
-    width: 60rem;
-}
-
-.products .box-container .box:hover .image img{
-    transform: scale(1.1);
-}
-
-.products .box-container .box .image .icons{
-    position: absolute;
-    bottom: 0; left: 0; right: 0;
-    display: flex;
-}
-
-.products .box-container .box .image .icons a{
-    height: 5rem;
-    line-height: 5rem;
-    font-size: 3.5rem;
-    width: 50%;
-    background: var(--pink);
-    color: #333;
-}
-
-.products .box-container .box .image .icons .cart-btn{
-    border-left: .1rem solid #fff;
-    border-right: .1rem solid #fff;
-    width: 100%;
-}
-
-.products .box-container .box .image .icons a:hover{
-    background: var(--mainpink);
-}
-
-.products .box-container .box .content{
-    padding: 2rem;
-    text-align: center;
-}
-
-.products .box-container .box .content h3{
-    font-size: 2.5rem;
-    color: #333;
-}
-
-.products .box-container .box .content h3{
-    font-size: 3rem;
-    color: #333;
+    font-size: 1.3rem;
 }
 
 .contact .row{
     display: flex;
     flex-wrap: wrap-reverse;
-    gap: 1.5rem;
+    gap: .5rem;
     align-items: center;
 }
 
 .contact .row form{
-    flex: 1 1 40rem;
-    padding: 10rem 3rem;
+    flex: 1 1 1rem;
+    padding: 1.5rem 1rem;
     box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
-    border: 1rem solid var(--pink);
+    border: .3rem solid var(--pink);
     background: var(--lightpink);
     border-radius: 2rem;
 }
 
 .contact .row .image{
-    flex: 1 1 40rem;
+    flex: 1 1 30rem;
 }
 
 .contact .row .image img{
@@ -341,11 +266,11 @@ header .fa-bars{
 }
 
 .contact .row form .box{
-    padding: 3rem;
-    font-size: 5rem;
+    padding: 1rem;
+    font-size: 1rem;
     color: #333;
     text-transform: none;
-    border: 1rem solid var(--pink);
+    border: .3rem solid var(--pink);
     border-radius: 1.5rem;
     margin: .7rem 0;
     width: 100%;
@@ -356,7 +281,7 @@ header .fa-bars{
 }
 
 .contact .row form textarea{
-    height: 50rem;
+    height: 15rem;
     resize: none;
 }
 
@@ -364,7 +289,7 @@ header .fa-bars{
 .footer .box-container{
     display: flex;
     flex-wrap: wrap;
-    gap: 3rem;
+    gap: 1.5rem;
     
 }
 
@@ -374,7 +299,7 @@ header .fa-bars{
 
 .footer .box-container .box p{
     color: #333;
-    font-size: 4rem;
+    font-size: 1.5rem;
     padding: 1rem 0;
     text-align: right;
 }
@@ -382,7 +307,7 @@ header .fa-bars{
 .footer .box-container .box a{
     display: block;
     color: #666;
-    font-size: 3rem;
+    font-size: .8rem;
     padding: 1rem 0;
     text-align: right;
 }
@@ -391,6 +316,12 @@ header .fa-bars{
     color: var(--pink);
     text-decoration: underline;
 }
+
+.footer .box-container .box img{
+    margin-top: 1rem;
+    width: 200px;
+}
+
 
 /* media queries */
 @media (max-width:991px){
@@ -420,7 +351,7 @@ header .fa-bars{
         position:absolute;
         top: 100%; left: 0; right: 0;
         background: #eee;
-        border-top: .1rem solid rgba(0, 0, 0, 1);
+        border-top: .1rem solid rgba(0, 0, 0, .1);
         clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
     }
 
@@ -432,7 +363,7 @@ header .fa-bars{
     margin: 1.5rem;
     padding: 1.5rem;
     background: #fff;
-    border: .1rem solid rgba(0, 0, 0, 1);
+    border: .1rem solid rgba(0, 0, 0, .1);
     display: block;
     }
 
@@ -464,6 +395,8 @@ header .fa-bars{
     }
     
 }
+
+
 /* نهاية home page */
 
 /*بداية تصميم loginPage.html*/
