--- a/style.css
+++ b/style.css
@@ -700,9 +700,164 @@ body
     color: #000;
     font-weight: 600;
 }
-
-
-
-
-
 /*نهاية تصميم creatAcount.html*/
+/* بداية cartPage */
+.containerCart {
+    width: 900px;
+    max-width: 90vw;
+    margin: auto;
+    text-align: center;
+    padding-top: 10px;
+    transition: transform .5s;
+}
+
+svg{
+    width: 30px;
+}
+
+header .icon-cart span{
+    width: 15px;
+    display: block;
+    height: 15px;
+    background-color: var(--pink);
+    justify-content: center;
+    align-items: center;
+    color: #333;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    right: 110px;
+}
+
+.listProduct .item img{
+    width: 90%;
+    margin-top: 20%;
+    
+}
+
+.listProduct {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+
+.listProduct .item{
+    background-color: #ffebeb;
+    margin-top: 50%;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.listProduct .item h2 {
+    font-weight: 500;
+    font-size: large;
+    margin-top: 10px;
+}
+
+.listProduct .item .detailsProduct{
+    font-size: small;
+    margin-top: 10px;
+}
+
+.listProduct .item button{
+    background-color: #333;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 20px;
+    margin-top: 10px;
+    border: none;
+    cursor: pointer;
+}
+
+.cartTab {
+    width: 250px;
+    background-color: #333;
+    color: var(--mainlightpink);
+    position: fixed;
+    inset: 0 -400px 0 auto;
+    display: grid;
+    grid-template-rows: 70px 1fr 70px;
+    transition: .5s;
+    margin-top: 5.2%;
+  
+}
+
+.showCart .cartTab{
+    inset: 0 0 0 auto;
+}
+
+.cartTab h1{
+    padding: 20px;
+    margin: 0;
+    font-weight: 300;
+    text-align: center;
+    margin-top: 15px;
+}
+
+.cartTab .btn{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-right: 35px;
+}
+
+.cartTab .btn button{
+    background-color: var(--white);
+    border: none;
+    font-weight: 500;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.cartTab .btn .close{
+    background-color: var(--mainpink);
+}
+
+.cartTab .btn:hover{
+    background-color: #333;
+}
+
+.cartTab .listCart .item img{
+    width: 100%;
+    margin-left: 10px;
+}
+
+.cartTab .listCart .item{
+    display: grid;
+    grid-template-columns: 70px 80px 80px 1fr;
+    gap: 10px;
+    text-align: center;
+    align-items: center;
+}
+
+.listCart .quantity span{
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    background-color: var(--lightpink);
+    color: #333;
+    border-radius: 50%;
+    cursor: pointer;
+    
+}
+
+.cartTab .listCart .item .name{
+
+    margin-left: 35px;
+   font-size: 15px;
+}
+
+.listCart .quantity span:nth-child(2){
+    background-color: transparent;
+    color: var(--pink);
+}
+
+.listCart .item:nth-child(even){
+    background-color: var(--mainpink);
+}
+
+.listCart::-webkit-scrollbar{
+    width: 0;
+}
+
+/* نهاية cartPage */
+
