--- a/style.css
+++ b/style.css
@@ -951,3 +951,94 @@ form button{
    
 }
 /*contactUsنهايه تصميم */
+/* بداية orderPage */
+
+.containterOrder{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 25px;
+    background-color: var(--mainpink);
+}
+
+.containterOrder form{
+    width: 700px;
+    padding: 20px;
+    background: var(--white);
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+}
+
+.containterOrder form .row{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.containterOrder form .row .col{
+    flex: 1 1 250px;
+}
+
+.col .title{
+    font-size: 20px;
+    color: var(--pink);
+    padding-bottom: 5px;
+    text-align: right;
+}
+
+.col .inputBox{
+    margin: 15px 0;
+}
+
+.col .inputBox label{
+    margin-bottom: 10px;
+    display: block;
+    text-align: right;
+    font-size: 13px;
+}
+
+.col .inputBox input, .col .inputBox select{
+    width: 100%;
+    border: 1px solid var(--pink);
+    padding: 8px 15px;
+    font-size: 10px;
+    text-align: right;
+}
+
+.col .inputBox input:focus, .col .inputBox select:focus{
+    border: 1px solid #333;
+}
+
+.col .inputBox img{
+   align-content: center;
+    height: 48px;
+    width: 250px;
+    margin-top: 5px;
+    filter: drop-shadow(0 0 1px #333);
+}
+
+.containterOrder form .submit_btn{
+    width: 100%;
+    padding: 12px;
+    font-size: 17px;
+    background: var(--pink);
+    color: #333;
+    margin-top: 5px;
+    cursor: pointer;
+}
+
+.containterOrder form .submit_btn:hover{
+    background: var(--mainpink);
+}
+
+input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button{
+    display: none;
+}
+
+.col .price{
+    align-content: center;
+}
+
+/* نهاية orderPage */
+
