--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ header .fa-bars{
     display: flex;
     align-items: center;
     min-height: 100vh;
-    background: url(img/catmain.jpg) no-repeat; 
+    background: url(Images/catmain.jpg) no-repeat;  
     background-size: cover;
     background-position: center;
 }
